# wrk-graphs

./: .gitignore  .mise.toml  .pre-commit-config.yaml  .yamlfmt.yaml  Cargo.toml  README.md  ghspa.js  index.html  index.scss  manifest.json
.github/workflows/: deploy.yml  test.yml
.sisyphus/: boulder.json
.sisyphus/notepads/css-theming-improvements/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/plans/: css-theming-improvements.md
src/: components.rs  drawing.rs  hooks.rs  main.rs  pages.rs  parser.rs  serializer.rs  serialzer.rs
src/components/: charts.rs  copy_button.rs  criterion.rs  dashboard_header.rs  latency_chart.rs  latency_percentile_chart.rs  line_chart.rs  metric_panel.rs  requests_per_sec_chart.rs  share_modal.rs  wrk.rs
src/components/charts/: chart_utils.rs  data_utils.rs  line_chart.rs  use_canvas.rs
src/components/criterion/: benchmark.rs  comparison.rs  data.rs  group_chart.rs  iteration_times_chart.rs  line_chart.rs  pdf_chart.rs  pdf_comparison_chart.rs  regression_chart.rs  regression_comparison_chart.rs  stat_distribution_chart.rs  stats_table.rs
src/components/wrk/: config.rs  latency_chart.rs  latency_percentile_chart.rs
src/hooks/: use_canvas.rs
src/pages/: dashboard.rs  home.rs  not_found.rs
src/parser/: criterion.rs  is_empty.rs  latency.rs  metrics.rs  percentile.rs  request_sec.rs  units.rs
src/parser/fixtures/: criterion_cli_grouped_bench.txt  criterion_cli_multiple.txt  criterion_cli_nanoseconds.txt  criterion_cli_simple.txt  criterion_json_output.json  criterion_sample.json  percentile_spectrum.txt  wrk1_basic.txt  wrk1_us_units.txt  wrk2_full.txt  wrk2_short.txt  wrk_calibration_no_histogram.txt  wrk_multiple_tests.txt
src/styles/: latency_percentile_chart.css
styles/base/: _base.scss  _theme.scss  _variables.scss
styles/components/: _charts.scss  _criterion.scss  _dashboard.scss  _error.scss  _home.scss  _latency_percentile_chart.scss  _metric-panel.scss  _modal.scss  _wrk_config.scss
styles/layout/: _layout.scss
